ajout de paragraphe 1

--- a/main.html
+++ b/main.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Un titre</h1>
-    <p>Un paragraphe</p>
-
+    <h1>Profil</h1>
 </body>
 </html>
