--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Un titre</h1>
     <p>Un paragraphe</p>
     <p>Un paragraphe test</p>
-
+    <p>Un paragraphe ajouté depuis le serveur</p>
 </body>
 </html>
