--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Un paragraphe</p>
     <p>Un paragraphe test</p>
     <p>Un paragraphe ajouté depuis le serveur</p>
+    <p>Un paragraphe de plus</p>
 </body>
 </html>
