--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Un titre</h1>
+    <p>Comment allez vous?</p>
     <p>Un paragraphe</p>
     <p>Un paragraphe test</p>
     <p>Un paragraphe ajouté depuis le serveur</p>
