--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Un titre</h1>
+    <h1>Bienvenue sur test</h1>
     <p>Comment allez vous?</p>
     <p>Un paragraphe</p>
     <p>Un paragraphe test</p>
